--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS + Shadcn-ui</title>
+    <title>Gizmo PFP Maker</title>
+    <meta property="og:title" content="Gizmo PFP Maker" />
+    <meta property="og:description" content="Add stuff (Gizmo) to your PFP" />
+    <meta
+      property="og:image"
+      content="https://gizmo-maker.vercel.app/og-image.png"
+    />
   </head>
 
   <body>
