feat: added twitter card

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       property="og:image"
       content="https://gizmo-maker.vercel.app/og-image.png"
     />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gizmo PFP Maker" />
+    <meta name="twitter:description" content="Add stuff (Gizmo) to your PFP" />
+    <meta
+      name="twitter:image"
+      content="https://gizmo-maker.vercel.app/og-image.png"
+    />
   </head>
 
   <body>
